updated about and projects

--- a/about.html
+++ b/about.html
@@ -496,14 +496,20 @@ In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bi
 <div id="medical-students" class="section level3">
 <h3>Medical Students</h3>
 <p><img src="images/niko.jpg" style="width:25.0%" /></p>
-<div id="nicolo-vitale-u-of-milan" class="section level4">
-<h4><em>Nicolo Vitale (U of Milan)</em></h4>
+<div id="nicolò-vitale-md-u-of-milan" class="section level4">
+<h4><em>Nicolò Vitale, MD </em>(U of Milan)*</h4>
+<p>Nicolò Vitale is cardiac surgery resident at <a href="https://www.unimi.it/it">Università degli studi di Milano</a>. He obtained his MD from Università degli studi di Milano. He is very interested in the mechanisms of ischemic heart failure. He is currently studying the mechanisms of structural degeneration of the pediatric bioprosthetic conduits.</p>
+<p><br />
+</p>
 </div>
-<div id="eduardo-u-of-bologna" class="section level4">
-<h4><em>Eduardo (U of Bologna)</em></h4>
-</div>
-<div id="evan-morehouse-school-of-medicine" class="section level4">
-<h4><em>Evan (Morehouse School of Medicine)</em></h4>
+<div id="edoardo-bianco-u-of-bologna" class="section level4">
+<h4><em>Edoardo Bianco<br />
+</em>(U of Bologna)*</h4>
+<p><br />
+</p>
+<p><img src="images/evan_woodard.jpg" style="width:25.0%" /> #### <em>Evan Woodard<br />
+</em>Morehouse School of Medicine)*</p>
+<p>I am Evan Woodard and I am a current 2nd year medical student at Morehouse School of Medicine interested in a career in cardiothoracic surgery. Some of my research and clinical interest include patient outcomes research and minimally invasive surgical techniques.</p>
 <p><br />
 </p>
 </div>
