--- a/projects.html
+++ b/projects.html
@@ -391,7 +391,10 @@ div.tocify {
 <p><br />
 </p>
 <p><em>Funding Source</em><br />
-<em>NIH R01HL131872 (Ferrari G - Levy RJ)</em></p>
+<em>NIH R01HL131872 (Ferrari G - Levy RJ)</em><br />
+<a href="https://reporter.nih.gov/search/ZaoPhLvNK0GqfjFCGu3xvw/project-details/10130913">NIH Reporter</a></p>
+<p><br />
+</p>
 </div>
 <div id="ischemic-mitral-regurgitation" class="section level2">
 <h2>Ischemic Mitral Regurgitation<br />
@@ -443,7 +446,10 @@ div.tocify {
 <p><br />
 </p>
 <p><em>Funding Source</em><br />
-<em>R01 HL122805</em></p>
+<em>R01 HL122805</em><br />
+<a href="https://reporter.nih.gov/search/ZaoPhLvNK0GqfjFCGu3xvw/project-details/9762185">NIH Reporter</a></p>
+<p><br />
+</p>
 </div>
 </div>
 <div id="biomedical-engineering" class="section level1">
