--- a/about.html
+++ b/about.html
@@ -472,6 +472,14 @@ In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bi
 <p><a href="mailto:%3Cmts2153@cumc.columbia.edu%3E">Email</a></p>
 <p><br />
 </p>
+<p><img src="images/niko.jpg" style="width:25.0%" /></p>
+</div>
+<div id="nicolò-vitale-md" class="section level4">
+<h4><em>Nicolò Vitale, MD</em><br />
+</h4>
+<p>Nicolò Vitale is cardiac surgery resident at <a href="https://www.unimi.it/it">Università degli studi di Milano</a>. He obtained his MD from Università degli studi di Milano. He is very interested in the mechanisms of ischemic heart failure. He is currently studying the mechanisms of structural degeneration of the pediatric bioprosthetic conduits.</p>
+<p><br />
+</p>
 </div>
 </div>
 <div id="biobank" class="section level3">
@@ -495,13 +503,6 @@ In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bi
 </div>
 <div id="medical-students" class="section level3">
 <h3>Medical Students</h3>
-<p><img src="images/niko.jpg" style="width:25.0%" /></p>
-<div id="nicolò-vitale-md-u-of-milan" class="section level4">
-<h4><em>Nicolò Vitale, MD </em>(U of Milan)*</h4>
-<p>Nicolò Vitale is cardiac surgery resident at <a href="https://www.unimi.it/it">Università degli studi di Milano</a>. He obtained his MD from Università degli studi di Milano. He is very interested in the mechanisms of ischemic heart failure. He is currently studying the mechanisms of structural degeneration of the pediatric bioprosthetic conduits.</p>
-<p><br />
-</p>
-</div>
 <div id="edoardo-bianco-u-of-bologna" class="section level4">
 <h4><em>Edoardo Bianco<br />
 </em>(U of Bologna)*</h4>
