--- a/about.html
+++ b/about.html
@@ -399,6 +399,8 @@ div.tocify {
 </p>
 <div id="associate-research-scientists" class="section level3">
 <h3>Associate Research Scientists</h3>
+<p><br />
+</p>
 <p><img src="images/esti.png" style="width:25.0%" /></p>
 <div id="esti-castillero-phd" class="section level4">
 <h4><em>Esti Castillero, PhD</em></h4>
@@ -414,6 +416,9 @@ div.tocify {
 </div>
 <div id="chiara-camillo-phd" class="section level4">
 <h4><em>Chiara Camillo, PhD</em></h4>
+<p><br />
+</p>
+<hr />
 <p><br />
 </p>
 </div>
@@ -436,10 +441,15 @@ div.tocify {
 <h4><em>Antonio Frasca, PhD</em></h4>
 <p><br />
 </p>
+<hr />
+<p><br />
+</p>
 </div>
 </div>
 <div id="surgical-residents" class="section level3">
 <h3>Surgical Residents</h3>
+<p><br />
+</p>
 <p><img src="images/abramov.jpg" style="width:25.0%" /></p>
 <div id="alexey-abramov-md" class="section level4">
 <h4><em>Alexey Abramov, MD</em></h4>
@@ -477,9 +487,11 @@ In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bi
 <div id="nicolò-vitale-md" class="section level4">
 <h4><em>Nicolò Vitale, MD</em><br />
 </h4>
+<p><em>U of Milan</em></p>
 <p>Nicolò Vitale is cardiac surgery resident at <a href="https://www.unimi.it/it">Università degli studi di Milano</a>. He obtained his MD from Università degli studi di Milano. He is very interested in the mechanisms of ischemic heart failure. He is currently studying the mechanisms of structural degeneration of the pediatric bioprosthetic conduits.</p>
 <p><br />
 </p>
+<hr />
 </div>
 </div>
 <div id="biobank" class="section level3">
@@ -491,6 +503,7 @@ In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bi
 <p><a href="mailto:%3Cvmm2142@cumc.columbia.edu%3E">Email</a></p>
 <p><br />
 </p>
+<hr />
 </div>
 <div id="lab-manager" class="section level4">
 <h4>Lab Manager</h4>
@@ -499,20 +512,27 @@ In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bi
 <h4><em>Mangesh Kurade</em></h4>
 <p><br />
 </p>
+<hr />
 </div>
 </div>
 <div id="medical-students" class="section level3">
 <h3>Medical Students</h3>
-<div id="edoardo-bianco-u-of-bologna" class="section level4">
-<h4><em>Edoardo Bianco<br />
-</em>(U of Bologna)*</h4>
+<div id="edoardo-bianco" class="section level4">
+<h4><em>Edoardo Bianco</em><br />
+</h4>
+<p><em>U of Bologna</em></p>
 <p><br />
 </p>
-<p><img src="images/evan_woodard.jpg" style="width:25.0%" /> #### <em>Evan Woodard<br />
-</em>Morehouse School of Medicine)*</p>
+<p><img src="images/evan_woodard.jpg" style="width:25.0%" /></p>
+</div>
+<div id="evan-woodard" class="section level4">
+<h4><em>Evan Woodard</em><br />
+</h4>
+<p><em>Morehouse School of Medicine</em></p>
 <p>I am Evan Woodard and I am a current 2nd year medical student at Morehouse School of Medicine interested in a career in cardiothoracic surgery. Some of my research and clinical interest include patient outcomes research and minimally invasive surgical techniques.</p>
 <p><br />
 </p>
+<hr />
 </div>
 </div>
 <div id="biomedical-engineering-students" class="section level3">
@@ -525,6 +545,7 @@ In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bi
 <p><a href="mailto:%3Cmm5944@columbia.edu%3E">Email</a></p>
 <p><br />
 </p>
+<hr />
 </div>
 </div>
 <div id="chief-vision-officer" class="section level3">
@@ -533,6 +554,9 @@ In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bi
 <div id="churro" class="section level4">
 <h4><em>Churro</em></h4>
 <p>2 years old Irish-Doodle. Strong interest in any type of food. Life’s not ruff when I am around. Woof</p>
+<p><br />
+</p>
+<hr />
 </div>
 </div>
 <div id="alumni" class="section level3">
@@ -541,6 +565,7 @@ In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bi
 <p>Postdocs</p>
 <p><br />
 </p>
+<hr />
 </div>
 </div>
 <div id="collaborators" class="section level1">
