--- a/about.html
+++ b/about.html
@@ -538,10 +538,12 @@ In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bi
 <div id="biomedical-engineering-students" class="section level3">
 <h3>Biomedical Engineering Students</h3>
 <p><img src="images/mas.jpg" style="width:25.0%" /></p>
-<div id="mar-martinez-mas-columbia-university" class="section level4">
-<h4><em>Mar Martinez Mas (Columbia University)</em><br />
-</h4>
-<p>Mar Martinez Mas is a Master’s student in <a href="https://www.bme.columbia.edu">Biomedical Engineering at Columbia University</a>. She is from Barcelona, Spain, and completed her undergraduate degree at <a href="https://www.upf.edu/es/">Universitat Pompeu Fabra</a> (Barcelona, Spain) where she worked in the field of biomedical electronics. Afterward, she completed the last year and a half of her degree at the <a href="https://www.polimi.it">Politecnico di Milano</a> (Milan, Italy), where she mainly studied the field of biomechanics. Her main interest lies in prosthetic heart valves and life support systems. She joined the Ferrari Lab in 2021 and is studying the mass and tissue thickening of cardiac valvular bioprostheses under different conditions.</p>
+<div id="mar-martinez-mas" class="section level4">
+<h4><em>Mar Martinez Mas</em></h4>
+<p><em>Columbia University</em><br />
+</p>
+<p>Mar Martinez Mas is a Master’s student in <a href="https://www.bme.columbia.edu">Biomedical Engineering at Columbia University</a>. She is from Barcelona, Spain, and completed her undergraduate degree at <a href="https://www.upf.edu/es/">Universitat Pompeu Fabra</a> (Barcelona, Spain) where she worked in the field of biomedical electronics. Afterward, she completed the last year and a half of her degree at the <a href="https://www.polimi.it">Politecnico di Milano</a> (Milan, Italy), where she mainly studied the field of biomechanics.<br />
+Her main interest lies in prosthetic heart valves and life support systems. She joined the Ferrari Lab in 2021 and is studying the mass and tissue thickening of cardiac valvular bioprostheses under different conditions.</p>
 <p><a href="mailto:%3Cmm5944@columbia.edu%3E">Email</a></p>
 <p><br />
 </p>
