--- a/index.html
+++ b/index.html
@@ -399,9 +399,8 @@ div.tocify {
 </div>
 <div id="social-media" class="section level2">
 <h2>Social Media</h2>
-<p>Coming soon</p>
-<p><br />
-</p>
+<a class="twitter-timeline" data-width="650" data-height="350" href="https://twitter.com/lab_ferrari?ref_src=twsrc%5Etfw">Tweets by lab_ferrari</a>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
 <div id="photos" class="section level2">
 <h2>Photos</h2>
