--- a/about.html
+++ b/about.html
@@ -386,9 +386,12 @@ div.tocify {
 </p>
 <p>My main research interests are in heart valve and vascular cell physiology, cardiac mechanobiology, materials science in medical devices, and the brain-heart axis.</p>
 <ul>
-<li><a href="https://twitter.com/ferrag02">Twitter</a></li>
 <li><a href="mailto:%3Cgf2375@cumc.columbia.edu%3E">Email</a></li>
 </ul>
+<p><br />
+</p>
+<a href="https://twitter.com/ferrag02?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow <span class="citation">@ferrag02</span></a>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <p><br />
 </p>
 </div>
