--- a/about.html
+++ b/about.html
@@ -390,8 +390,10 @@ div.tocify {
 </ul>
 <p><br />
 </p>
-<a href="https://twitter.com/ferrag02?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow <span class="citation">@ferrag02</span></a>
+<center>
+<a class="twitter-timeline" data-width="350" data-height="650" href="https://twitter.com/ferrag02?ref_src=twsrc%5Etfw">Tweets by ferrag02</a>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</center>
 <p><br />
 </p>
 </div>
