--- a/projects.html
+++ b/projects.html
@@ -319,7 +319,7 @@ div.tocify {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Ferrari Lab @ Columbia</a>
+      <a class="navbar-brand" href="index.html">Ferrari Lab at Columbia University</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -505,8 +505,8 @@ div.tocify {
 </p>
 </div>
 </div>
-<div id="covid-19-related-cardiomyopathy" class="section level1">
-<h1>Covid-19 Related Cardiomyopathy</h1>
+<div id="covid-19-cardiac-injury" class="section level1">
+<h1>Covid-19 Cardiac Injury</h1>
 <div id="mechanisms-of-cardiac-remodeling-in-covid-19-patients" class="section level2">
 <h2>Mechanisms of Cardiac Remodeling in COVID-19 Patients</h2>
 <p>As a result of the COVID-19 pandemic, it has been shown that patients with pre-existing heart disease are likely to have more severe COVID-19 symptoms than those without pre-existing heart disease. We seek to test the hypothesis that SARS-CoV-2 induces cardiac injury by decreasing ACE2-mediated cardioprotection, and exacerbating AGE/RAGE-mediated cell signaling mechanisms. The 2 major things we seek to address are if this cell signaling pathway induces cardiac injury, and if circulating RAGE signaling markers be used as biomarkers of cardiovascular injury during acute COVID infection, and after recovery from infection.</p>
