--- a/index.html
+++ b/index.html
@@ -438,6 +438,7 @@ Integrated program for surgical residents interested in a career in translationa
 <p><a href="https://columbiasurgery.org/heart">Columbia Cardiac Surgery</a><br />
 </p>
 <p><a href="https://columbiasurgery.org/general-surgery-residency">Columbia Surgery Residency Program</a></p>
+<p><a href="https://columbiasurgery.org/cardiothoracic-training">Columbia Integrated Cardiothoracic Surgery Residency Program (I-6)</a></p>
 <p><br />
 </p>
 </div>
