--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ div.tocify {
 </li>
 <li>
   <a href="mailto:&lt;gf2375@cumc.columbia.edu&gt;">
-    <span class="fa fa-envelope fa-lg"></span>
+    <span class="fa fa-telegram fa-lg"></span>
      
   </a>
 </li>
