--- a/biobank.html
+++ b/biobank.html
@@ -319,7 +319,7 @@ div.tocify {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Ferrari Lab @ Columbia</a>
+      <a class="navbar-brand" href="index.html">Ferrari Lab at Columbia University</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -346,7 +346,7 @@ div.tocify {
 </li>
 <li>
   <a href="mailto:&lt;gf2375@cumc.columbia.edu&gt;">
-    <span class="fa fa-envelope fa-lg"></span>
+    <span class="fa fa-telegram fa-lg"></span>
      
   </a>
 </li>
