--- a/projects.html
+++ b/projects.html
@@ -346,7 +346,7 @@ div.tocify {
 </li>
 <li>
   <a href="mailto:&lt;gf2375@cumc.columbia.edu&gt;">
-    <span class="fa fa-envelope fa-lg"></span>
+    <span class="fa fa-telegram fa-lg"></span>
      
   </a>
 </li>
