--- a/about.html
+++ b/about.html
@@ -373,6 +373,9 @@ div.tocify {
 </div>
 
 
+<head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<head>
 <div id="primary-investigator" class="section level1">
 <h1>Primary Investigator</h1>
 <p><br />
@@ -385,9 +388,7 @@ div.tocify {
 <p>I am the Scientific Director of the <a href="https://columbiasurgery.org/research/ferrari-lab">Cardiothoracic Research Program and Director of the Columbia Biobank for Translational Science</a>, an applied biobank supporting translational and precision medicine initiatives.<br />
 </p>
 <p>My main research interests are in heart valve and vascular cell physiology, cardiac mechanobiology, materials science in medical devices, and the brain-heart axis.</p>
-<ul>
-<li><a href="mailto:%3Cgf2375@cumc.columbia.edu%3E">Email</a></li>
-</ul>
+<p><i class="fa fa-telegram"></i> <a href="mailto:%3Cgf2375@cumc.columbia.edu%3E">Email</a></p>
 <p><br />
 </p>
 <center>
@@ -412,7 +413,7 @@ div.tocify {
 <p>I am a Biomedical Researcher with a PhD in Physiology and Endocrinology. My research focuses on the study of the advanced stages of myocardial and cardiac valve remodeling. My research argues that cardiac remodeling is regulated both at a local and systemic level and that it may, in turn, affect remote tissues by endocrine crosstalk.<br />
 </p>
 <p>Currently, I am leading projects that explore myocardium-cardiac valve communication in the adaptation to ischemic injury and the role of circulating factors from the skeletal muscle in cardiac remodeling in end-stage heart failure.</p>
-<p><a href="mailto:%3Cec2929@cumc.columbia.edu%3E">Email</a><br />
+<p><i class="fa fa-telegram"></i> <a href="mailto:%3Cec2929@cumc.columbia.edu%3E">Email</a><br />
 <em>(recommendations for mystery books welcome)</em></p>
 <p><a href="https://scholar.google.com/citations?hl=en&amp;user=02qHMNkAAAAJ">Google Scholar</a><br />
 </p>
@@ -437,7 +438,7 @@ div.tocify {
 <p>Dr. Yingfei Xue is currently a postdoctoral research scientist in Dr. Giovanni Ferrari lab at Columbia University. He obtained his PhD degree from <a href="http://www.pharmacy.pitt.edu/research/research_index.php">University of Pittsburgh School of Pharmacy</a>. His research interest is centered around cardiovascular implants including bioprosthetic valves, conduits, and patches.<br />
 </p>
 <p>His research goal is to better understand the mechanisms of cardiovascular implant failure and improve implant durability. He has 20 publications and served as editorial board member and reviewer for multiple journals in the fields of biomedical engineering.</p>
-<p><a href="mailto:%3Cyx2529@cumc.columbia.edu%3E">Email</a><br />
+<p><i class="fa fa-telegram"></i> <a href="mailto:%3Cyx2529@cumc.columbia.edu%3E">Email</a><br />
 </p>
 <p><br />
 </p>
@@ -462,7 +463,7 @@ div.tocify {
 </p>
 <p>Currently, he is a post-doctoral research fellow in Dr. Ferrari’s lab studying the underlying mechanisms of structural degeneration of bioprosthetic heart valves with next-generation proteomics. He is also pursuing a Master’s degree in the <a href="https://www.publichealth.columbia.edu/academics/degrees/master-science/clinical-research-methods">Department of Biostatistics in the Mailmans School of Public Health</a> track.<br />
 In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bike.</p>
-<p><a href="mailto:%3Caa3832@cumc.columbia.edu%3E">Email</a></p>
+<p><i class="fa fa-telegram"></i> <a href="mailto:%3Caa3832@cumc.columbia.edu%3E">Email</a></p>
 <p><br />
 </p>
 </div>
@@ -477,14 +478,14 @@ In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bi
 <p>Clinton is a resident in <a href="https://columbiasurgery.org/cardiothoracic-training">Integrated Cardiothoracic surgery at New York Presbyterian-Columbia</a>. He obtained his MD from <a href="https://www.uabmedicine.org">University of Alabama at Birmingham</a>, where he developed an interest in cardiac surgery.<br />
 </p>
 <p>Now having completed 3 years of residency, he is currently studying the mechanisms of cardiovascular damage related to COVID-19, along with several clinical projects in adult cardiac surgery.</p>
-<p><a href="mailto:%3Cwe2153@cumc.columbia.edu%3E">Email</a></p>
+<p><i class="fa fa-telegram"></i> <a href="mailto:%3Cwe2153@cumc.columbia.edu%3E">Email</a></p>
 <p><br />
 </p>
 </div>
 <div id="michael-simpson-md" class="section level4">
 <h4><em>Michael Simpson, MD</em></h4>
 <p>Michael is a resident in the Integrated Cardiothoracic Surgery residency program at New York Presbyterian-Columbia. He obtained his MD from Columbia University College of Physicians &amp; Surgeons. He has completed three years of his cardiac surgical training and has an interest in aortic surgery and structural heart disease. He is currently studying pathologic mechanisms in mitral valve disease and is involved in several clinical projects across the spectrum of adult cardiac surgery.</p>
-<p><a href="mailto:%3Cmts2153@cumc.columbia.edu%3E">Email</a></p>
+<p><i class="fa fa-telegram"></i> <a href="mailto:%3Cmts2153@cumc.columbia.edu%3E">Email</a></p>
 <p><br />
 </p>
 <p><img src="images/niko.jpg" style="width:25.0%" /></p>
@@ -505,7 +506,7 @@ In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bi
 <div id="vivian-moreno" class="section level4">
 <h4><em>Vivian Moreno</em></h4>
 <p>Vivian Moreno is the Clinical Research Coordinator for the Ferrari Lab. She completed her Bachelor’s of Science in Biomedical Science at the <a href="https://www.kent.ac.uk">University of Kent in Canterbury, England</a>. Her research background includes cancer research at Yale University and novel antimicrobial peptides at <a href="https://novabiotics.co.uk">NovaBiotics, Ltd</a>. Her favorite pastimes include playing the piano, volunteering, and working out at AARMY.</p>
-<p><a href="mailto:%3Cvmm2142@cumc.columbia.edu%3E">Email</a></p>
+<p><i class="fa fa-telegram"></i> <a href="mailto:%3Cvmm2142@cumc.columbia.edu%3E">Email</a></p>
 <p><br />
 </p>
 <hr />
@@ -549,7 +550,7 @@ In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bi
 </p>
 <p>Mar Martinez Mas is a Master’s student in <a href="https://www.bme.columbia.edu">Biomedical Engineering at Columbia University</a>. She is from Barcelona, Spain, and completed her undergraduate degree at <a href="https://www.upf.edu/es/">Universitat Pompeu Fabra</a> (Barcelona, Spain) where she worked in the field of biomedical electronics. Afterward, she completed the last year and a half of her degree at the <a href="https://www.polimi.it">Politecnico di Milano</a> (Milan, Italy), where she mainly studied the field of biomechanics.<br />
 Her main interest lies in prosthetic heart valves and life support systems. She joined the Ferrari Lab in 2021 and is studying the mass and tissue thickening of cardiac valvular bioprostheses under different conditions.</p>
-<p><a href="mailto:%3Cmm5944@columbia.edu%3E">Email</a></p>
+<p><i class="fa fa-telegram"></i> <a href="mailto:%3Cmm5944@columbia.edu%3E">Email</a></p>
 <p><br />
 </p>
 <hr />
