--- a/projects.html
+++ b/projects.html
@@ -373,6 +373,9 @@ div.tocify {
 </div>
 
 
+<head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 <p><br />
 </p>
 <div id="mitral-valve" class="section level1">
@@ -388,11 +391,12 @@ div.tocify {
 <p><br />
 </p>
 </center>
-<p><br />
-</p>
+<br />
+
+<body>
 <p><em>Funding Source</em><br />
 <em>NIH R01HL131872 (Ferrari G - Levy RJ)</em><br />
-<a href="https://reporter.nih.gov/search/ZaoPhLvNK0GqfjFCGu3xvw/project-details/10130913">NIH Reporter</a></p>
+<i class='fas fa-flask'></i> <a href="https://reporter.nih.gov/search/ZaoPhLvNK0GqfjFCGu3xvw/project-details/10130913">NIH Reporter</a></p>
 <p><br />
 </p>
 </div>
@@ -447,7 +451,7 @@ div.tocify {
 </p>
 <p><em>Funding Source</em><br />
 <em>R01 HL122805</em><br />
-<a href="https://reporter.nih.gov/search/ZaoPhLvNK0GqfjFCGu3xvw/project-details/9762185">NIH Reporter</a></p>
+<i class='fas fa-flask'></i> <a href="https://reporter.nih.gov/search/ZaoPhLvNK0GqfjFCGu3xvw/project-details/9762185">NIH Reporter</a></p>
 <p><br />
 </p>
 </div>
@@ -469,7 +473,7 @@ div.tocify {
 </p>
 <p><em>Funding Source</em><br />
 <em>R01HL143008</em><br />
-<a href="https://reporter.nih.gov/search/EpM1RwPYiUeXjqUjLqrCFg/project-details/10202704">NIH Reporter</a></p>
+<i class='fas fa-flask'></i> <a href="https://reporter.nih.gov/search/EpM1RwPYiUeXjqUjLqrCFg/project-details/10202704">NIH Reporter</a></p>
 </div>
 <div id="structural-degeneration-of-implantable-biomaterials-in-pediatric-patients" class="section level2">
 <h2>Structural Degeneration of Implantable Biomaterials in Pediatric Patients<br />
@@ -501,7 +505,7 @@ div.tocify {
 </p>
 <p><em>Funding Source</em><br />
 <em>Russell Berrie Foundation Pre-translational Diabetes Research Award</em><br />
-<a href="https://www.russellberriefoundation.org/diabetes-care-and-research"><em>Russell Berrie Foundation</em></a><br />
+<i class='fas fa-vial'></i> <a href="https://www.russellberriefoundation.org/diabetes-care-and-research"><em>Russell Berrie Foundation</em></a><br />
 </p>
 </div>
 </div>
@@ -521,7 +525,7 @@ div.tocify {
 </p>
 <p><em>Funding Source</em><br />
 <em>John Jones Surgical Society Fellowship</em><br />
-<a href="https://columbiasurgery.org/alumni/john-jones-surgical-society"><em>John Jones Surgical Society</em></a></p>
+<i class='fas fa-book'></i> <a href="https://columbiasurgery.org/alumni/john-jones-surgical-society"><em>John Jones Surgical Society</em></a></p>
 </div>
 </div>
 <div id="surgical-innovation" class="section level1">
