--- a/index.html
+++ b/index.html
@@ -377,28 +377,32 @@ div.tocify {
 </div>
 
 
+<head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
 <p><br />
 </p>
 <div id="our-lab" class="section level2">
-<h2>Our Lab</h2>
-<p>Welcome to the Ferrari Laboratory website, we are located at the Columbia University Irving Medical Center in New York City, New York.</p>
+<h2><i class='fas fa-compass'></i> Our Lab</h2>
+<p>Welcome to the Ferrari Laboratory website. We are located at the Columbia University Irving Medical Center in New York City, New York.</p>
 <p><br />
 </p>
 </div>
 <div id="our-research" class="section level2">
-<h2>Our Research</h2>
+<h2><i class='fas fa-flask'></i> Our Research</h2>
 <p>Coming soon</p>
 <p><br />
 </p>
 </div>
 <div id="lab-in-the-news" class="section level2">
-<h2>Lab in the News</h2>
+<h2><i class='fas fa-rss-square'></i> Lab in the News</h2>
 <p>Coming soon</p>
 <p><br />
 </p>
 </div>
 <div id="social-media" class="section level2">
-<h2>Social Media</h2>
+<h2><i class='fas fa-comments'></i> Social Media</h2>
 <a class="twitter-timeline" data-width="650" data-height="350" href="https://twitter.com/lab_ferrari?ref_src=twsrc%5Etfw">Tweets by lab_ferrari</a>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <p><br />
@@ -418,13 +422,13 @@ div.tocify {
 <h3>Ferrari Lab Links</h3>
 <p><br />
 </p>
-<p><a href="about.html">About Us</a><br />
+<p><i class='fas fa-users'></i> <a href="about.html">About Us</a><br />
 Meet our team</p>
-<p><a href="projects.html">Projects and Publications</a><br />
+<p><i class='fas fa-flask'></i> <a href="projects.html">Projects and Publications</a><br />
 Learn about our ongoing projects and publications</p>
-<p><a href="biobank.html">Biobank Inquiries</a><br />
+<p><i class='fas fa-vial'></i> <a href="biobank.html">Cardiothoracic Biobank Inquiries</a><br />
 Resources for accessing our biobank</p>
-<p><a href="program.html">Research Program for Residents</a><br />
+<p><i class='fas fa-cubes'></i> <a href="program.html">Research Program for Residents</a><br />
 Integrated program for surgical residents interested in a career in translational science</p>
 <p><br />
 </p>
@@ -433,14 +437,15 @@ Integrated program for surgical residents interested in a career in translationa
 <h3>Columbia University Links</h3>
 <p><br />
 </p>
-<p><a href="https://columbiasurgery.org/research/ferrari-lab">Ferrari Lab – Columbia Biobank for Translational Science</a><br />
+<p><i class='fas fa-laptop'></i> <a href="https://columbiasurgery.org/research/ferrari-lab">Ferrari Lab – Columbia Biobank for Translational Science</a><br />
 </p>
-<p><a href="https://columbiasurgery.org/heart">Columbia Cardiac Surgery</a><br />
+<p><i class='fas fa-hospital-symbol'></i> <a href="https://columbiasurgery.org/heart">Columbia Cardiac Surgery</a><br />
 </p>
-<p><a href="https://columbiasurgery.org/general-surgery-residency">Columbia Surgery Residency Program</a></p>
-<p><a href="https://columbiasurgery.org/cardiothoracic-training">Columbia Integrated Cardiothoracic Surgery Residency Program (I-6)</a></p>
+<p><i class='fas fa-procedures'></i> <a href="https://columbiasurgery.org/general-surgery-residency">Columbia Surgery Residency Program</a></p>
+<p><i class='fas fa-stethoscope'></i> <a href="https://columbiasurgery.org/cardiothoracic-training">Columbia Integrated Cardiothoracic Surgery Residency Program (I-6)</a></p>
 <p><br />
 </p>
+</body>
 </div>
 </div>
 
