--- a/index.html
+++ b/index.html
@@ -409,13 +409,13 @@ div.tocify {
 </p>
 </div>
 <div id="photos" class="section level2">
-<h2>Photos</h2>
+<h2><i class='fas fa-camera'></i> Photos</h2>
 <p>Coming soon</p>
 <p><br />
 </p>
 </div>
 <div id="navigate" class="section level2">
-<h2>Navigate</h2>
+<h2><i class='fas fa-bookmark'></i> Navigate</h2>
 <p><br />
 </p>
 <div id="ferrari-lab-links" class="section level3">
