--- a/index.html
+++ b/index.html
@@ -438,11 +438,13 @@ Integrated program for surgical residents interested in a career in translationa
 <p><br />
 </p>
 <p><i class='fas fa-laptop'></i> <a href="https://columbiasurgery.org/research/ferrari-lab">Ferrari Lab – Columbia Biobank for Translational Science</a><br />
-</p>
+Columbia University website to learn about the lab</p>
 <p><i class='fas fa-hospital-symbol'></i> <a href="https://columbiasurgery.org/heart">Columbia Cardiac Surgery</a><br />
-</p>
-<p><i class='fas fa-procedures'></i> <a href="https://columbiasurgery.org/general-surgery-residency">Columbia Surgery Residency Program</a></p>
-<p><i class='fas fa-stethoscope'></i> <a href="https://columbiasurgery.org/cardiothoracic-training">Columbia Integrated Cardiothoracic Surgery Residency Program (I-6)</a></p>
+Access healthcare services from Columbia Cardiac Surgery</p>
+<p><i class='fas fa-procedures'></i> <a href="https://columbiasurgery.org/general-surgery-residency">Columbia Surgery Residency Program</a><br />
+Learn about the Columbia Surgery residency program</p>
+<p><i class='fas fa-stethoscope'></i> <a href="https://columbiasurgery.org/cardiothoracic-training">Columbia Integrated Cardiothoracic Surgery Residency Program (I-6)</a><br />
+Learn about the Columbia Surgery Integrated Cardiothoracic residency program</p>
 <p><br />
 </p>
 </body>
