--- a/index.html
+++ b/index.html
@@ -423,13 +423,13 @@ div.tocify {
 <p><br />
 </p>
 <p><i class='fas fa-users'></i> <a href="about.html">About Us</a><br />
-Meet our team</p>
+Meet our team and collaborators</p>
 <p><i class='fas fa-flask'></i> <a href="projects.html">Projects and Publications</a><br />
-Learn about our ongoing projects and publications</p>
+Explore our ongoing projects and publications</p>
 <p><i class='fas fa-vial'></i> <a href="biobank.html">Cardiothoracic Biobank Inquiries</a><br />
-Resources for accessing our biobank</p>
+Information about our collected biobank specimens</p>
 <p><i class='fas fa-cubes'></i> <a href="program.html">Research Program for Residents</a><br />
-Integrated program for surgical residents interested in a career in translational science</p>
+Learn about our program for surgical residents interested in a career in translational science</p>
 <p><br />
 </p>
 </div>
