updated about with dov

--- a/about.html
+++ b/about.html
@@ -459,16 +459,19 @@ div.tocify {
 <p><img src="images/abramov.jpg" style="width:25.0%" /></p>
 <div id="alexey-abramov-md" class="section level4">
 <h4><em>Alexey Abramov, MD</em></h4>
-<p>Dr. Alexey Abramov is a General Surgery resident in the <a href="https://columbiasurgery.org/general-surgery-residency">New York Presbyterian-Columbia</a> program with an interest in cardiothoracic surgery fellowship and biomedical engineering. He graduated from <a href="http://college.emory.edu/main/index.html">Emory University</a> and received his medical degree from <a href="https://www.nymc.edu/school-of-medicine-som/">New York Medical College</a>.<br />
+<p>Alexey is a General Surgery resident in the <a href="https://columbiasurgery.org/general-surgery-residency">New York Presbyterian-Columbia</a> program with an interest in cardiothoracic surgery fellowship and biomedical engineering. He graduated from <a href="http://college.emory.edu/main/index.html">Emory University</a> and received his medical degree from <a href="https://www.nymc.edu/school-of-medicine-som/">New York Medical College</a>.<br />
 </p>
-<p>Currently, he is a post-doctoral research fellow in Dr. Ferrari’s lab studying the underlying mechanisms of structural degeneration of bioprosthetic heart valves with next-generation proteomics. He is also pursuing a Master’s degree in the <a href="https://www.publichealth.columbia.edu/academics/degrees/master-science/clinical-research-methods">Department of Biostatistics in the Mailmans School of Public Health</a> track.<br />
+<p>Currently, he is a NIH T32 post-doctoral research fellow in Dr. Ferrari’s lab studying the underlying mechanisms of structural degeneration of bioprosthetic heart valves with next-generation proteomics. He is also pursuing a Master’s degree in the <a href="https://www.publichealth.columbia.edu/academics/degrees/master-science/clinical-research-methods">Department of Biostatistics in the Mailmans School of Public Health</a> track.<br />
 In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bike.</p>
 <p><i class="fa fa-telegram"></i> <a href="mailto:%3Caa3832@cumc.columbia.edu%3E">Email</a></p>
 <p><br />
 </p>
+<p><img src="images/dov.jpg" style="width:25.0%" /></p>
 </div>
 <div id="dov-levine-md" class="section level4">
 <h4><em>Dov Levine, MD</em></h4>
+<p>Dov is a General Surgery resident and aspiring Cardiac Surgeon currently doing his T32 Postdoctoral Research Fellowship in the Ferrari Lab. A local New Yorker, he attended medical school at <a href="https://einsteinmed.org">Albert Einstein College of Medicine</a>, and graduated with Alpha Omega Alpha and Distinction in Clinical Research honors. He then continued with his surgical training at <a href="https://www.rwjms.rutgers.edu/departments/surgery/divisions/other/division-of-general-surgery/residency/about-the-program">Robert Wood Johnson University Hospital</a>. His research interests include cellular mechanisms of thoracic aortic aneurysm development, including the role of Advanced Glycated End products (AGEs) on aortic wall instability.</p>
+<p><i class="fa fa-telegram"></i> <a href="mailto:%3Cdl3267@cumc.columbia.edu%3E">Email</a></p>
 <p><br />
 </p>
 <p><img src="images/clint.jpg" style="width:25.0%" /></p>
