--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@ if (window.hljs) {
 
 
 
-<link rel="stylesheet" href="style.css" type="text/css" />
+<link rel="stylesheet" href="style2.css" type="text/css" />
 
 
 
