--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@ if (window.hljs) {
 
 
 
-<link rel="stylesheet" href="style2" type="text/css" />
+<link rel="stylesheet" href="style2.css" type="text/css" />
 
 
 
