updated evans links

--- a/about.html
+++ b/about.html
@@ -538,7 +538,7 @@ In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bi
 <h4><em>Evan Woodard</em><br />
 </h4>
 <p><em>Morehouse School of Medicine</em></p>
-<p>I am Evan Woodard and I am a current 2nd year medical student at Morehouse School of Medicine interested in a career in cardiothoracic surgery. Some of my research and clinical interest include patient outcomes research and minimally invasive surgical techniques.</p>
+<p>I am Evan Woodard and I am a current 2nd year medical student at <a href="https://msm.edu">Morehouse School of Medicine</a>interested in a career in cardiothoracic surgery. Some of my research and clinical interest include patient outcomes research and minimally invasive surgical techniques.</p>
 <p><br />
 </p>
 <hr />
