--- a/about.html
+++ b/about.html
@@ -594,11 +594,11 @@ Her main interest lies in prosthetic heart valves and life support systems. She 
 <p><em>R01HL131872</em></p>
 <p><br />
 </p>
+<p><img src="images/kalfa.jpg" style="width:25.0%" /></p>
 </div>
 <div id="david-kalfa-md-phd" class="section level3">
 <h3>David Kalfa, MD, PhD<br />
 </h3>
-<p><img src="images/kalfa.jpg" style="width:25.0%" /></p>
 <p>Florence Irving Assistant Professor of Surgery<br />
 Section of Pediatric &amp; Congenital Cardiac Surgery<br />
 Director, Pediatric Heart Valve Center<br />
@@ -614,12 +614,12 @@ Columbia University College of Physicians and Surgeons<br />
 <p><em>R01HL155381</em></p>
 <p><br />
 </p>
+<p><img src="images/sacks.jpg" style="width:25.0%" /></p>
 </div>
 <div id="micheal-s-sacks-phd" class="section level3">
 <h3>Micheal S Sacks PhD<br />
 </h3>
 <p><em>University of Texas at Austin</em></p>
-<p><img src="images/sacks.jpg" style="width:25.0%" /></p>
 <p>The bicuspid aortic valve (BAV) is the most common cardiac congenital anomaly. Due to the widespread availability and routine use of screening echocardiography, development of clinical methods for the identification of asymptomatic young patients with BAV is now realistic. We thus plan to develop sensitive, clinically derivable functional indices that will yield clinically relevant patient- specific strategies for identifying BAV patients at high risk.<br />
 </p>
 <p><br />
@@ -628,6 +628,7 @@ Columbia University College of Physicians and Surgeons<br />
 <p><a href="https://wccms.oden.utexas.edu">Lab Website</a></p>
 <p><br />
 </p>
+<p><img src="images/Lara-Gharibeh.jpg" style="width:25.0%" /></p>
 </div>
 <div id="lara-garibeh-phd" class="section level3">
 <h3>Lara Garibeh PhD<br />
@@ -635,30 +636,30 @@ Columbia University College of Physicians and Surgeons<br />
 <p><em>University of Ottawa Heart Institute</em></p>
 <p><em>Canadian Institute of Research and Health (CIHR) Fellowship (2021-2023)</em><br />
 </p>
-<p><img src="images/Lara-Gharibeh.jpg" style="width:25.0%" /></p>
 <p>Identification of Molecular Pathways that Protect Against Atherosclerosis Coronary artery disease (CAD) is one of the leading causes of cardiovascular death worldwide. Current treatments for CAD include lifestyle modifications and medical therapies to reduce its risk factors. When these methods fail, more invasive interventions, such as placement of a stent to restore blood flow or performance of a coronary artery bypass graft surgery, are used. This latter procedure aims at bypassing the blocked area using either veins or arteries. The use of arterial grafts is associated with a better long-term patency and a reduced rate of progression of atherosclerosis when compared to vein grafts. Yet, the exact molecular mechanisms by which arteries are protected from disease progression are not well understood. This study aims to identify the underlying mechanisms that render arteries resistant to atherosclerosis.<br />
 </p>
 <p><a href="https://www.linkedin.com/in/lara-gharibeh/">LinkedIn</a></p>
 <p><br />
 </p>
+<p><img src="images/grau.jpg" style="width:25.0%" /></p>
 </div>
 <div id="juan-b-grau-md" class="section level3">
 <h3>Juan B Grau MD<br />
 </h3>
 <p><em>The Valley Hospital </em></p>
-<p><img src="images/grau.jpg" style="width:25.0%" /></p>
 <p>Dr. Grau’s work blends clinical knowledge and expertise with the tools of basic science to find new approaches to clinically relevant problems. He serves as a reviewer for the Annals of Thoracic Surgery, Journal of the American Heart Association, Circulation, and the British Heart Foundation, among others.<br />
 </p>
 <p><br />
 </p>
+<p><img src="images/witschey_walter.jpg" style="width:25.0%" /></p>
 </div>
 <div id="walter-r.-witschey-phd" class="section level3">
 <h3>Walter R. Witschey, PhD<br />
 </h3>
-<p><em>University of Pennsylvania</em> Associate Professor of Radiology<br />
+<p><em>University of Pennsylvania</em><br />
+Associate Professor of Radiology<br />
 Director of the Advanced Cardiovascular Imaging Lab at the University of Pennsylvania<br />
 </p>
-<p><img src="images/witschey_walter.jpg" style="width:25.0%" /></p>
 <p>Theoretical and applied advanced imaging, especially magnetic resonance imaging and quantitative cardiovascular imaging.</p>
 <p><a href="https://www.med.upenn.edu/corlab/">Lab Website</a></p>
 <p><br />
