text, photos updates

--- a/about.html
+++ b/about.html
@@ -336,7 +336,7 @@ div.tocify {
   <a href="biobank.html">Biobank</a>
 </li>
 <li>
-  <a href="program.html">Research Training Program</a>
+  <a href="program.html">Research Program for Residents</a>
 </li>
 <li>
   <a href="https://columbiasurgery.org/heart/">
@@ -376,8 +376,8 @@ div.tocify {
 <head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <head>
-<div id="primary-investigator" class="section level1">
-<h1>Primary Investigator</h1>
+<div id="principal-investigator" class="section level1">
+<h1>Principal Investigator</h1>
 <p><br />
 </p>
 <p><img src="images/ferrari.jpg" style="width:25.0%" /></p>
@@ -415,7 +415,7 @@ div.tocify {
 <p>Currently, I am leading projects that explore myocardium-cardiac valve communication in the adaptation to ischemic injury and the role of circulating factors from the skeletal muscle in cardiac remodeling in end-stage heart failure.</p>
 <p><i class="fa fa-telegram"></i> <a href="mailto:%3Cec2929@cumc.columbia.edu%3E">Email</a><br />
 <em>(recommendations for mystery books welcome)</em></p>
-<p><a href="https://scholar.google.com/citations?hl=en&amp;user=02qHMNkAAAAJ">Google Scholar</a><br />
+<p><i class="fa fa-book"></i> <a href="https://scholar.google.com/citations?hl=en&amp;user=02qHMNkAAAAJ">Google Scholar</a><br />
 </p>
 <p><br />
 </p>
@@ -440,6 +440,7 @@ div.tocify {
 <p>His research goal is to better understand the mechanisms of cardiovascular implant failure and improve implant durability. He has 20 publications and served as editorial board member and reviewer for multiple journals in the fields of biomedical engineering.</p>
 <p><i class="fa fa-telegram"></i> <a href="mailto:%3Cyx2529@cumc.columbia.edu%3E">Email</a><br />
 </p>
+<p><i class="fa fa-book"></i> <a href="https://scholar.google.com/citations?user=W8-jXZ0AAAAJ&amp;hl=en">Google Scholar</a></p>
 <p><br />
 </p>
 </div>
