--- a/program.html
+++ b/program.html
@@ -336,7 +336,7 @@ div.tocify {
   <a href="biobank.html">Biobank</a>
 </li>
 <li>
-  <a href="program.html">Research Training Program</a>
+  <a href="program.html">Research Program for Residents</a>
 </li>
 <li>
   <a href="https://columbiasurgery.org/heart/">
@@ -388,6 +388,11 @@ div.tocify {
 </ol>
 <p><br />
 </p>
+<center>
+<img src="images/research_program.png" style="width:85.0%" />
+</center>
+<p><br />
+</p>
 </div>
 <div id="training-grants" class="section level2">
 <h2>Training Grants</h2>
@@ -398,21 +403,15 @@ div.tocify {
 </div>
 <div id="application-process" class="section level2">
 <h2>Application Process</h2>
-<p><u>August - September</u>: Applicants are invited to contact the PI via email and submit a full CV, a 1-page Research Statement, and the names of two references<br />
+<p><u><strong>August - September</strong></u>: Applicants are invited to contact the PI via email and submit a full CV, a 1-page Research Statement, and the names of two references<br />
 </p>
-<p><u>October - November</u>: Interviews with Dr. Ferrari and the Leadership of the Dept of Surgery. Identification of possible clinical co-mentor(s) and research project(s).<br />
+<p><u><strong>October - November</strong></u>: Interviews with Dr. Ferrari and the Leadership of the Dept of Surgery. Identification of possible clinical co-mentor(s) and research project(s).<br />
 </p>
-<p><u>February - March</u>: Selection of trainees and visit to Columbia. Meeting with PI, co-investigators, clinical co-mentor(s), and visit to the Lab<br />
+<p><u><strong>February - March</strong></u>: Selection of trainees and visit to Columbia. Meeting with PI, co-investigators, clinical co-mentor(s), and visit to the Lab<br />
 </p>
-<p><u>Mid-June</u>: Applicants are invited to attend the annual DOS Research Symposium. Each year, in June, each Resident-Investigator will attend a retreat with senior faculty members on this program sponsored by the Department of Surgery at the Roy and Diana Vagelos Education Center. A keynote lecture from an internationally recognized speaker will open the Symposium. A specific section will be dedicated to the Resident-Investigators who will present their research. The retreat is also a powerful networking opportunity for resident-investigator to learn and interact with senior academic physicians. The Research and Advanced Education Committee will provide feedback to the Resident-Investigators./</p>
-<p><u>July 1st</u>: PGY lab year(s) begins<br />
+<p><u><strong>Mid-June</strong></u>: Applicants are invited to attend the annual DOS Research Symposium. Each year, in June, each Resident-Investigator will attend a retreat with senior faculty members on this program sponsored by the Department of Surgery at the Roy and Diana Vagelos Education Center. A keynote lecture from an internationally recognized speaker will open the Symposium. A specific section will be dedicated to the Resident-Investigators who will present their research. The retreat is also a powerful networking opportunity for resident-investigator to learn and interact with senior academic physicians. The Research and Advanced Education Committee will provide feedback to the Resident-Investigators./</p>
+<p><u><strong>July 1st</strong></u>: PGY lab year(s) begins<br />
 </p>
-<p><br />
-</p>
-</div>
-<div id="andrew-sabin-research-fellowship" class="section level2">
-<h2>Andrew Sabin Research Fellowship</h2>
-<p>Coming soon</p>
 <p><br />
 </p>
 </div>
