--- a/projects.html
+++ b/projects.html
@@ -336,7 +336,7 @@ div.tocify {
   <a href="biobank.html">Biobank</a>
 </li>
 <li>
-  <a href="program.html">Research Training Program</a>
+  <a href="program.html">Research Program for Residents</a>
 </li>
 <li>
   <a href="https://columbiasurgery.org/heart/">
@@ -531,17 +531,32 @@ div.tocify {
 <div id="surgical-innovation" class="section level1">
 <h1>Surgical Innovation<br />
 </h1>
-<div id="patents" class="section level2">
-<h2>Patents<br />
-</h2>
+<p><br />
+</p>
+<div id="ageless-valve" class="section level2">
+<h2>AGEless Valve</h2>
+<p><br />
+</p>
+<div id="anti-glycation-modification-of-bioprosthetic-heart-valve-tissues-to-enhance-valve-lifespan" class="section level3">
+<h3>Anti-Glycation Modification of Bioprosthetic Heart Valve Tissues to Enhance Valve Lifespan<br />
+</h3>
+<p><a href="http://columbiabiomedx.com/ageless">AGEless Valve Website</a><br />
+</p>
+<p><br />
+</p>
+<div id="unmet-medical-need" class="section level4">
+<h4>Unmet Medical Need<br />
+</h4>
+<p>A way to address Bioprosthetic heart valves (BHV) glycation in heart valve replacement patients in order to mitigate structural valve degeneration and device failure</p>
 </div>
-<div id="awards-and-course" class="section level2">
-<h2>Awards and Course<br />
-</h2>
+<div id="envisioned-healthcare-product" class="section level4">
+<h4>Envisioned Healthcare Product<br />
+</h4>
+<p>The technology aims to extend BHV lifespans by chemically modifying BHV tissues to render them inert to physiologic glycation and associated protein incorporation, two interacting, key mechanisms of SVD they recently discovered. By addressing BHV glycation in heart valve replacements, the team hopes to mitigate structural valve degeneration and device failure for all BHV implant recipients, especially younger patients and diabetics.</p>
+<p><br />
+</p>
 </div>
-<div id="start-up" class="section level2">
-<h2>Start Up<br />
-</h2>
+</div>
 </div>
 </div>
 
