--- a/index.html
+++ b/index.html
@@ -390,8 +390,13 @@ div.tocify {
 </p>
 </div>
 <div id="our-research" class="section level2">
-<h2><i class='fas fa-flask'></i> Our Research</h2>
-<p>Coming soon</p>
+<h2><i class='fas fa-flask'></i> Our Research<br />
+</h2>
+<p><br />
+</p>
+<center>
+<p><img src="images/research.png" style="width:85.0%" /></p>
+</center>
 <p><br />
 </p>
 </div>
