updated prior residents

--- a/about.html
+++ b/about.html
@@ -572,12 +572,35 @@ Her main interest lies in prosthetic heart valves and life support systems. She 
 </div>
 </div>
 <div id="alumni" class="section level3">
-<h3>Alumni</h3>
-<p>Residents</p>
-<p>Postdocs</p>
+<h3>Alumni<br />
+</h3>
+<p><br />
+</p>
+<div id="alex-p-kossar-md" class="section level4">
+<h4>Alex P Kossar MD<br />
+</h4>
+<p>General Surgery Resident (2018-2020)<br />
+</p>
+<p><br />
+</p>
+</div>
+<div id="alex-dangelo-md" class="section level4">
+<h4>Alex D’Angelo MD<br />
+</h4>
+<p>CT Surgery Resident (2019-2020)<br />
+</p>
+<p><br />
+</p>
+</div>
+<div id="matteo-marro-md" class="section level4">
+<h4>Matteo Marro MD<br />
+</h4>
+<p>General Surgery Resident (2019-2020)<br />
+</p>
 <p><br />
 </p>
 <hr />
+</div>
 </div>
 </div>
 <div id="collaborators" class="section level1">
