updated changes to toc, edoardo

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ div.tocify {
   <a href="biobank.html">Biobank</a>
 </li>
 <li>
-  <a href="program.html">Research Training Program</a>
+  <a href="program.html">Research Program for Residents</a>
 </li>
 <li>
   <a href="https://columbiasurgery.org/heart/">
