--- a/projects.html
+++ b/projects.html
@@ -413,6 +413,9 @@ div.tocify {
 </center>
 <p><br />
 </p>
+<hr />
+<p><br />
+</p>
 </div>
 </div>
 <div id="aortic-valve" class="section level1">
@@ -429,6 +432,9 @@ div.tocify {
 <p><br />
 </p>
 </center>
+<p><br />
+</p>
+<hr />
 <p><br />
 </p>
 </div>
@@ -454,12 +460,15 @@ div.tocify {
 <i class='fas fa-flask'></i> <a href="https://reporter.nih.gov/search/ZaoPhLvNK0GqfjFCGu3xvw/project-details/9762185">NIH Reporter</a></p>
 <p><br />
 </p>
+<hr />
+<p><br />
+</p>
 </div>
 </div>
 <div id="biomedical-engineering" class="section level1">
 <h1>Biomedical Engineering</h1>
 <div id="glycation-mediated-mechanisms-of-bioprosthetic-heart-valve-failure" class="section level2">
-<h2>Glycation-mediated mechanisms of Bioprosthetic Heart Valve Failure<br />
+<h2>Glycation-mediated Mechanisms of Bioprosthetic Heart Valve Failure<br />
 </h2>
 <p>Heart valve disease at this time can only be treated surgically, with either valve replacement or repair. Bioprosthetic heart valves (BHV), fabricated from glutaraldehyde fixed heterografts, such as bovine pericardium (BP) or porcine aortic valves (PAV), are widely used in both cardiac surgery and in transcatheter valve replacements. Despite outstanding short-term outcomes, BHV dysfunction due to structural valve leaflet degeneration (SVD) develops over time, frequently necessitating device replacement. Calcification is observed in the majority of SVD cases; however, 25% or more SVD cases are not associated with calcification. Recent work from our group demonstrated that BHV are susceptible to non-calcification induced failure mechanisms, involving the formation of unique oxidized amino acids (OxAA) in BHV, such as the crosslink, di-tyrosine (di-Tyr). Feasibility studies also recently documented in BHV explant samples the presence of advanced glycation end products (AGE). The contributions of both AGE and OxAA to SVD pathophysiology has not been previously investigated by our group or others. We are studying the hypotheses that the accumulation of AGE in BHV leaflets together with the receptor for AGE (RAGE) mediated inflammatory response, and OxAA modification of structural proteins contribute to BHV SVD. These mechanisms also are hypothesized to interact with BHV calcification and co-morbidities, such as diabetes and coronary artery disease to enhance SVD.</p>
 <br />
@@ -505,7 +514,11 @@ div.tocify {
 </p>
 <p><em>Funding Source</em><br />
 <em>Russell Berrie Foundation Pre-translational Diabetes Research Award</em><br />
-<i class='fas fa-vial'></i> <a href="https://www.russellberriefoundation.org/diabetes-care-and-research"><em>Russell Berrie Foundation</em></a><br />
+<i class='fas fa-vial'></i> <a href="https://www.russellberriefoundation.org/diabetes-care-and-research"><em>Russell Berrie Foundation</em></a></p>
+<p><br />
+</p>
+<hr />
+<p><br />
 </p>
 </div>
 </div>
@@ -526,6 +539,11 @@ div.tocify {
 <p><em>Funding Source</em><br />
 <em>John Jones Surgical Society Fellowship</em><br />
 <i class='fas fa-book'></i> <a href="https://columbiasurgery.org/alumni/john-jones-surgical-society"><em>John Jones Surgical Society</em></a></p>
+<p><br />
+</p>
+<hr />
+<p><br />
+</p>
 </div>
 </div>
 <div id="surgical-innovation" class="section level1">
