--- a/about.html
+++ b/about.html
@@ -376,6 +376,8 @@ div.tocify {
 <head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <head>
+<p><br />
+</p>
 <div id="principal-investigator" class="section level1">
 <h1>Principal Investigator</h1>
 <p><br />
@@ -431,6 +433,8 @@ div.tocify {
 </div>
 <div id="postdoctoral-research-fellows" class="section level3">
 <h3>Postdoctoral Research Fellows</h3>
+<p><br />
+</p>
 <p><img src="images/xue.JPG" style="width:25.0%" /></p>
 <div id="yingfei-xue-phd" class="section level4">
 <h4><em>Yingfei Xue, PhD</em><br />
@@ -488,7 +492,7 @@ In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bi
 </div>
 <div id="michael-simpson-md" class="section level4">
 <h4><em>Michael Simpson, MD</em></h4>
-<p>Michael is a resident in the Integrated Cardiothoracic Surgery residency program at New York Presbyterian-Columbia. He obtained his MD from Columbia University College of Physicians &amp; Surgeons. He has completed three years of his cardiac surgical training and has an interest in aortic surgery and structural heart disease. He is currently studying pathologic mechanisms in mitral valve disease and is involved in several clinical projects across the spectrum of adult cardiac surgery.</p>
+<p>Michael is a resident in the <a href="https://columbiasurgery.org/cardiothoracic-training">Integrated Cardiothoracic surgery at New York Presbyterian-Columbia</a>. He obtained his MD from <a href="https://www.vagelos.columbia.edu/education/academic-programs/md-program">Columbia University College of Physicians &amp; Surgeons</a>. He has completed three years of his cardiac surgical training and has an interest in aortic surgery and structural heart disease. He is currently studying pathologic mechanisms in mitral valve disease and is involved in several clinical projects across the spectrum of adult cardiac surgery.</p>
 <p><i class="fa fa-telegram"></i> <a href="mailto:%3Cmts2153@cumc.columbia.edu%3E">Email</a></p>
 <p><br />
 </p>
@@ -530,7 +534,10 @@ In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bi
 <div id="edoardo-bianco" class="section level4">
 <h4><em>Edoardo Bianco</em><br />
 </h4>
-<p><em>U of Bologna</em></p>
+<p><em>U of Bologna</em><br />
+</p>
+<p><img src="images/edoardo.jpg" style="width:25.0%" /></p>
+<p>I am a current medical student in my fifth year at the <a href="https://www.unibo.it/en">Alma Mater Studiorum Università di Bologna</a>. I developed an interest for cardiac surgery in my third year. My research and clinical interest mainly involve the study of the aortic pathology, and particularly the treatment of the acute aortic syndrome and the subcellular mechanisms involved in the pathogenesis of it.</p>
 <p><br />
 </p>
 <p><img src="images/evan_woodard.jpg" style="width:25.0%" /></p>
