updated biobank info

--- a/biobank.html
+++ b/biobank.html
@@ -373,6 +373,9 @@ div.tocify {
 </div>
 
 
+<p><br />
+</p>
+<body>
 <div id="introduction" class="section level1">
 <h1>Introduction</h1>
 <p><br />
@@ -382,10 +385,17 @@ div.tocify {
 <p><img src="images/biobank_cropped.png" style="width:85.0%" /></p>
 <p>Established in 2017 it included specimens collected from patients undergoing cardiothoracic surgery at CUIMC and CHONY. Frozen and paraffin tissues, primary-derived cells, RNA, DNA, serum, plasma as well as clinical and imaging data are collected by our clinical coordinators upon informed consent. CBTS shares clinical data with partner biobanks at the University of Pennsylvania, University of Texas, University of Ottawa, Valley Hospital, and a quickly expanding list of national and international research partners./</p>
 <p>Our Biobank strongly collaborate with the <a href="https://www.irvinginstitute.columbia.edu">Columbia University Biobank and The Irving Institute for Clinical and Translational Research</a>.</p>
+<p><br />
+</p>
+<hr />
 </div>
-<div id="inquiry-form" class="section level1">
-<h1>Inquiry Form</h1>
-<p>Coming soon.</p>
+<div id="inquiries" class="section level1">
+<h1>Inquiries</h1>
+<p><br />
+</p>
+<p>Please contact Dr. Ferrari and/or our Biobank Clinical Research Coordinator Vivian Moreno for more information regarding requesting available specimens for your research.</p>
+<p><i class="fa fa-telegram"></i> <a href="mailto:%3Cgf2375@cumc.columbia.edu%3E">Email Dr. Ferrari</a></p>
+<p><i class="fa fa-telegram"></i> <a href="mailto:%3Cvmm2142@cumc.columbia.edu%3E">Email Vivian Moreno</a></p>
 </div>
 
 
