--- a/index.html
+++ b/index.html
@@ -385,7 +385,14 @@ div.tocify {
 </p>
 <div id="our-lab" class="section level2">
 <h2><i class='fas fa-compass'></i> Our Lab</h2>
-<p>Welcome to the Ferrari Laboratory website. We are located at the Columbia University Irving Medical Center in New York City, New York.</p>
+<center>
+<p>Welcome to the Ferrari Laboratory website.<br />
+</p>
+<p>We are located at the Columbia University Irving Medical Center in New York City, New York.</p>
+<p><br />
+</p>
+<p><img src="images/nyc.jpg" style="width:85.0%" /></p>
+</center>
 <p><br />
 </p>
 </div>
@@ -402,7 +409,18 @@ div.tocify {
 </div>
 <div id="lab-in-the-news" class="section level2">
 <h2><i class='fas fa-rss-square'></i> Lab in the News</h2>
-<p>Coming soon</p>
+<p><br />
+</p>
+<div id="demobox">
+<p>October 2021<br />
+Launched Ferrari Lab website.</p>
+</div>
+<p><br />
+</p>
+<div id="demobox">
+<p>October 2021<br />
+Alexey Abramov’s abstract titled “Extracorporeal Membrane Oxygenation (ECMO) Support in Patients with Covid-19: A Historical Control Propensity Score Matched Study” was accepted for an oral presentation at the annual meeting for the Society of Thoracic Surgeons (STS) in Miami, FL.</p>
+</div>
 <p><br />
 </p>
 </div>
