--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ Launched Ferrari Lab website.</p>
 </p>
 <div id="demobox">
 <p>October 2021<br />
-Alexey Abramov’s abstract titled “Extracorporeal Membrane Oxygenation (ECMO) Support in Patients with Covid-19: A Historical Control Propensity Score Matched Study” was accepted for an oral presentation at the annual meeting for the Society of Thoracic Surgeons (STS) in Miami, FL.</p>
+Alexey Abramov’s abstract “Extracorporeal Membrane Oxygenation (ECMO) Support in Patients with Covid-19: A Historical Control Propensity Score Matched Study” was accepted for an oral presentation at the annual meeting for the Society of Thoracic Surgeons (STS) in Miami, FL.</p>
 </div>
 <p><br />
 </p>
