improved styling index

--- a/index.html
+++ b/index.html
@@ -388,9 +388,9 @@ div.tocify {
 <p><br />
 </p>
 <center>
-<p>Welcome to the Ferrari Laboratory website.<br />
+<p><strong>Welcome to the Ferrari Laboratory website.</strong><br />
 </p>
-<p>We are located at the Columbia University Irving Medical Center in New York City, New York.</p>
+<p><strong>We are located at the Columbia University Irving Medical Center in New York City, New York.</strong></p>
 <p><br />
 </p>
 <p><img src="images/nyc.jpg" style="width:90.0%" /></p>
@@ -463,13 +463,17 @@ Learn about our program for surgical residents interested in a career in transla
 <p><br />
 </p>
 <p><i class='fas fa-laptop'></i> <a href="https://columbiasurgery.org/research/ferrari-lab">Ferrari Lab – Columbia Biobank for Translational Science</a><br />
-Columbia University website to learn about the lab</p>
+Columbia University Ferrari lab website</p>
+<hr />
 <p><i class='fas fa-hospital-symbol'></i> <a href="https://columbiasurgery.org/heart">Columbia Cardiac Surgery</a><br />
-Access healthcare services from Columbia Cardiac Surgery</p>
-<p><i class='fas fa-procedures'></i> <a href="https://columbiasurgery.org/general-surgery-residency">Columbia Surgery Residency Program</a><br />
-Learn about the Columbia Surgery residency program</p>
+Meet the surgeons from the Columbia Cardiac Surgery team</p>
 <p><i class='fas fa-stethoscope'></i> <a href="https://columbiasurgery.org/cardiothoracic-training">Columbia Integrated Cardiothoracic Surgery Residency Program (I-6)</a><br />
-Learn about the Columbia Surgery Integrated Cardiothoracic residency program</p>
+Learn about the Columbia Integrated Cardiothoracic Surgery residency program</p>
+<hr />
+<p><i class="fa fa-hospital-o" aria-hidden="true"></i> <a href="https://columbiasurgery.org/">Columbia General Surgery</a><br />
+Meet the surgeons from the Columbia General Surgery team</p>
+<p><i class='fas fa-procedures'></i> <a href="https://columbiasurgery.org/general-surgery-residency">Columbia Surgery Residency Program</a><br />
+Learn about the Columbia General Surgery residency program</p>
 <p><br />
 </p>
 </body>
