updated text built by

--- a/about.html
+++ b/about.html
@@ -553,7 +553,8 @@ In his free time, he enjoys the outdoors, hiking, skiing, and riding his road bi
 </div>
 </div>
 <div id="biomedical-engineering-students" class="section level3">
-<h3>Biomedical Engineering Students</h3>
+<h3>Biomedical Engineering Students<br />
+</h3>
 <p><img src="images/mas.jpg" style="width:25.0%" /></p>
 <div id="mar-martinez-mas" class="section level4">
 <h4><em>Mar Martinez Mas</em></h4>
@@ -694,6 +695,9 @@ Director of the Advanced Cardiovascular Imaging Lab at the University of Pennsyl
 <p>Theoretical and applied advanced imaging, especially magnetic resonance imaging and quantitative cardiovascular imaging.</p>
 <p><a href="https://www.med.upenn.edu/corlab/">Lab Website</a></p>
 <p><br />
+</p>
+<p style="text-align:right;font-size:12px;">
+<em>Website built by A Abramov, Oct 2021</em>
 </p>
 </div>
 </div>
