--- a/program.html
+++ b/program.html
@@ -433,6 +433,11 @@ div.tocify {
 <p><a href="https://columbiasurgery.org/alumni/john-jones-surgical-society"><em>John Jones Surgical Society</em></a></p>
 <p>The John Jones Surgical Society. The Society is an organization named after the author of the first surgical textbook in the colonies and our first Professor of Surgery. At its annual meetings The Society recognizes with awards outstanding residents with major accomplishments in research, surgical education, and in clinical service.</p>
 <p>In 2006 the John Jones Surgical Society established the John Jones Fellowship Fund within the Department of Surgery at Columbia University to generate support for young surgeon-researchers and surgeon-educators through a formal process. The Society’s goal is to support basic and clinical research initiatives at the resident level. The fund currently supports the research activities of one General Surgery resident annually, selected on a competitive basis. A Research Committee composed of 22 faculty members from the Department of Surgery and external scholars review grant submissions as part of the Department of Surgery’s Annual Startup Grant process which provides laboratory support awards.</p>
+<p><br />
+</p>
+<p style="text-align:right;font-size:12px;">
+<em>Website built by A Abramov, Oct 2021</em>
+</p>
 </div>
 </div>
 
