--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ div.tocify {
 <p><strong>We are located at the Columbia University Irving Medical Center in New York City, New York.</strong></p>
 <p><br />
 </p>
-<p><img src="images/nyc.jpg" style="width:90.0%" /></p>
+<p><img src="images/nyc.jpg" style="width:80.0%" /></p>
 </center>
 <p><br />
 </p>
@@ -404,7 +404,7 @@ div.tocify {
 <p><br />
 </p>
 <center>
-<p><img src="images/research.png" style="width:85.0%" /></p>
+<p><img src="images/research.png" style="width:65.0%" /></p>
 </center>
 <p><br />
 </p>
@@ -477,6 +477,11 @@ Learn about the Columbia General Surgery residency program</p>
 <p><br />
 </p>
 </body>
+<p><br />
+</p>
+<p style="text-align:right;font-size:12px;">
+<em>Website built by A Abramov, Oct 2021</em>
+</p>
 </div>
 </div>
 
